openturns/1.20/_sources/auto_meta_modeling/general_purpose_metamodels/index.rst.txt


.. _sphx_glr_auto_meta_modeling_general_purpose_metamodels:

.. _General purpose metamodels:

General purpose metamodels
--------------------------



.. raw:: html

    <div class="sphx-glr-thumbnails">


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Create a linear least squares model">

.. only:: html

  .. image:: /auto_meta_modeling/general_purpose_metamodels/images/thumb/sphx_glr_plot_create_linear_least_squares_model_thumb.png
    :alt:

  :ref:`sphx_glr_auto_meta_modeling_general_purpose_metamodels_plot_create_linear_least_squares_model.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Create a linear least squares model</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Create a general linear model metamodel">

.. only:: html

  .. image:: /auto_meta_modeling/general_purpose_metamodels/images/thumb/sphx_glr_plot_general_linear_model_thumb.png
    :alt:

  :ref:`sphx_glr_auto_meta_modeling_general_purpose_metamodels_plot_general_linear_model.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Create a general linear model metamodel</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Taylor approximations">

.. only:: html

  .. image:: /auto_meta_modeling/general_purpose_metamodels/images/thumb/sphx_glr_plot_taylor_approximation_thumb.png
    :alt:

  :ref:`sphx_glr_auto_meta_modeling_general_purpose_metamodels_plot_taylor_approximation.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Taylor approximations</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Create a linear model">

.. only:: html

  .. image:: /auto_meta_modeling/general_purpose_metamodels/images/thumb/sphx_glr_plot_linear_model_thumb.png
    :alt:

  :ref:`sphx_glr_auto_meta_modeling_general_purpose_metamodels_plot_linear_model.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Create a linear model</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Mixture of experts">

.. only:: html

  .. image:: /auto_meta_modeling/general_purpose_metamodels/images/thumb/sphx_glr_plot_expert_mixture_thumb.png
    :alt:

  :ref:`sphx_glr_auto_meta_modeling_general_purpose_metamodels_plot_expert_mixture.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Mixture of experts</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="We consider te so-called Linthurst data set, which contains measures of aerial biomass (BIO) as...">

.. only:: html

  .. image:: /auto_meta_modeling/general_purpose_metamodels/images/thumb/sphx_glr_plot_stepwise_thumb.png
    :alt:

  :ref:`sphx_glr_auto_meta_modeling_general_purpose_metamodels_plot_stepwise.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Perfom stepwise regression</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Over-fitting and model selection">

.. only:: html

  .. image:: /auto_meta_modeling/general_purpose_metamodels/images/thumb/sphx_glr_plot_overfitting_model_selection_thumb.png
    :alt:

  :ref:`sphx_glr_auto_meta_modeling_general_purpose_metamodels_plot_overfitting_model_selection.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Over-fitting and model selection</div>
    </div>


.. raw:: html

    </div>


.. toctree::
   :hidden:

   /auto_meta_modeling/general_purpose_metamodels/plot_create_linear_least_squares_model
   /auto_meta_modeling/general_purpose_metamodels/plot_general_linear_model
   /auto_meta_modeling/general_purpose_metamodels/plot_taylor_approximation
   /auto_meta_modeling/general_purpose_metamodels/plot_linear_model
   /auto_meta_modeling/general_purpose_metamodels/plot_expert_mixture
   /auto_meta_modeling/general_purpose_metamodels/plot_stepwise
   /auto_meta_modeling/general_purpose_metamodels/plot_overfitting_model_selection

